--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ function show_details(data) {
         return {time:data.min_arrival + val * 60 * 15, count:0};
     });
     $(data.data).each(function(index, item) {
-        buckets[bin_index(data.min_arrival, item.arrival, 60 * 15)].count++;
+        buckets[bin_ping(data.min_arrival, item.arrival, 60 * 15)].count++;
     });
 }
 
