--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <script>
-var w, h, svg, scale;
+var w, h, svg, scale, active;
 var base_url = "http://wifi.meyersj.com/api";
 var device_data = {};
 
@@ -116,14 +116,66 @@ function bin_ping(min, value, inc) {
     return 3;
 }
 
+
+function add_arcs(mac, buckets) {
+    var angle = d3.scale.linear()
+            .domain([0, 4])
+            .range([0, 2 * Math.PI]);
+    
+    var color = d3.scale.pow(1/2)
+            .domain([0, 15])
+            .range(["white", "#259E1C"])
+   
+    var arc = d3.svg.arc()
+        .innerRadius(50)
+        .outerRadius(60)
+        .startAngle(function(d) {
+            return angle(d[0]);
+        })
+        .endAngle(function(d) {
+            return angle(d[1]);
+        });
+   
+    d3.select("g[mac='"+mac+"']")
+        .selectAll("path")
+        .data(buckets)
+        .enter()
+        .append("path")
+        .attr("d", function(d, i) {
+            return arc([i + 0.02, i+1 - 0.02]);
+        })
+        .attr("fill", "white")
+        .attr("opacity", 0);
+
+    d3.select("g[mac='"+mac+"']")
+        .selectAll("path")
+        .transition()
+        .duration(500)
+        .attr("fill", function(d, i) {
+            return color(Math.min(15, d));
+        })
+        .attr("opacity", 1);
+}
+
+function remove_arcs() {
+    d3.select("g[mac='"+active+"']")
+        .selectAll("path")
+        .remove();
+    active = null;
+}
+
+
 function show_details(data) {
-    console.log(data);
+    if (active == data.meta.mac) return;
     var buckets = [0, 1, 2, 3].map(function(val) {
-        return {time:data.min_arrival + val * 60 * 15, count:0};
+        return 0;
     });
     $(data.data).each(function(index, item) {
-        buckets[bin_ping(data.min_arrival, item.arrival, 60 * 15)].count++;
+        buckets[bin_ping(data.min_arrival, item.arrival, 60 * 15)]++;
     });
+    remove_arcs();
+    add_arcs(data.meta.mac, buckets);
+    active = data.meta.mac;
 }
 
 function build_nodes (force, nodes) { 
@@ -181,6 +233,9 @@ function build_nodes (force, nodes) {
         .enter()
         .append("g")
         .attr("class", "node")
+        .attr("mac", function(d) {
+            return d.mac;
+        })
         .call(force.drag)
         .on('click', node_click)
         .on('mouseover', node_mouseover)
