user remote endpoint instead of local

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
 var w, h, svg, scales;
 var window_size = 10;
-var endpoint = "http://localhost:5000/query?window=" + window_size;
+var endpoint = "http://explore.meyersj.com:8005/query?window=" + window_size;
+//var endpoint = "http://localhost:8005/query?window=" + window_size;
 
 $(document).ready(function() {
     function refresh() {
