--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 var window_size = 10;
 var interval = 5000;
 var w, h, svg;
-var scaleFactory, legend, hourDataCache;
+var scaleFactory, legend, userDataCache;
 var scales = {};
 var active = null;
 var legend;
@@ -94,7 +94,7 @@ $(document).ready(function() {
     svg = canvas("#visual");
     scaleFactory = new ScaleFactory(w, h, window_size);
     legend = new Legend(svg, scaleFactory);
-    hourDataCache = new DataCache();
+    userDataCache = new DataCache();
     buildScales(scaleFactory);
     update();
     setInterval(function() { update(); }, interval);
@@ -122,7 +122,7 @@ function mouseoverNode(d) {
         return;
     }
     clear_hour_circles();
-    toggleHourSummary(d);
+    toggleUserSummary(d);
     active = d.Mac;
 }
 
@@ -134,6 +134,16 @@ function clear_hour_circles() {
     var nodes = svg.selectAll(".hour-data-point");
     nodes.selectAll(".hour-data-point").selectAll("*").remove();
     nodes.remove();
+
+    nodes = svg.selectAll(".daily-data-point");
+    nodes.selectAll(".daily-data-point").selectAll("*").remove();
+    nodes.remove();
+
+}
+
+function drawUserSummary(mac, data) {
+    drawHourSummary(mac, data);
+    drawDailySummary(mac, data);
 }
 
 function drawHourSummary(mac, data) {
@@ -161,19 +171,44 @@ function drawHourSummary(mac, data) {
         });
 }
 
-function toggleHourSummary(d) {
-    var cache = hourDataCache.get(d.Mac);
+function drawDailySummary(mac, data) {
+    var xScale = scaleFactory.dailyTime(data.DailyStart)
+    var nodes = svg.selectAll(".daily-data-point")
+        .data(data.DailyData)
+        .enter()
+        .append("g")
+        .attr("class", "daily-data-point")
+        .attr("mac", function(d) {
+            return d.Mac     
+        })
+        .append("circle")
+        .attr('fill', function(d) {
+            return scales.hourColor(d.AvgSignal);         
+        })
+        .attr('r', function(d) {
+            return scales.hourRadius(d.Bucket5Count);
+        })
+        .attr('cx', function(d) {
+            return xScale(d.Hour);
+        })
+        .attr('cy', function(d) {
+            return h - 60;
+        });
+}
+
+function toggleUserSummary(d) {
+    var cache = userDataCache.get(d.Mac);
     if (cache == null) {
         // download and update cache
         $.getJSON(summary_endpoint, {mac:d.Mac}, function(data) {
             //console.log(data);
-            hourDataCache.put(d.Mac, data, 360);
-            drawHourSummary(d.Mac, data)
+            userDataCache.put(d.Mac, data, 360);
+            drawUserSummary(d.Mac, data)
         });
     }
     else {
         // use cached data
-        drawHourSummary(d.Mac, cache)
+        drawUserSummary(d.Mac, cache)
     }
 }
 
