fix broken link

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
           hour of activity at the bottom of the screen.
           Each circle represents data from a 5 minute interval.
           </p>
-          <a href="demo.html" class="btn btn-primary btn-lg">View Demo</a>
+          <a href="index.html" class="btn btn-primary btn-lg">View Demo</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 main">
           <h3>Stack Overview</h3>
