add note to hover over devices

--- a/index.html
+++ b/index.html
@@ -43,11 +43,16 @@
     </nav>
 
     <div class="container-fluid">
-      <div class="row content-container">
-        <div id="svg-column" class="col-xs-12 col-sm-12 col-md-12">
+      <div id="header-row" class="row content-container content-top">
+        <div class="col-xs-12 col-sm-12 col-md-12">
+            <h4>Hover over active devices to see recent history.</h4>
+        </div>
+      </div>
+      <div id="svg-row" class="row content-container content-bottom">
+        <div class="col-xs-12 col-sm-12 col-md-12">
           <div id="visual"></div>
         </div>
-    </div>
+      </div>
     </div><!-- /.container-fluid -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>  
