--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                     <em>timstamp</em> and <em>MAC</em> to track device across visits
               </li>
               <li class="list-group-item">
-                    Store data in database and aggregate in
+                    Store headers in database and aggregate in
                     <em>5 min</em>,
                     <em>hour</em>,
                     <em>day</em> and
@@ -100,6 +100,7 @@
               </li>
               <li class="list-group-item">
                     Web-services written in Go to accept requests from Raspberry Pi
+                    and web-clients
               </li>
               <li class="list-group-item">PostgreSQL datastore</li>
               <li class="list-group-item">D3 Visualizations</li>
