--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
           <h3>Description</h3>
           <p>
-          Raspberry Pi listening for WiFi probe requests from devices. The MAC
-          address is retrieved from each packet and stored along with signal
-          strength. These headers are collected and sent to the server over HTTP
+          Raspberry Pi listening for WiFi probe requests from nearby devices.
+          The MAC address is retrieved from each packet and stored along with signal
+          strength. These headers are collected and sent to a server over HTTP
           every 5 seconds.
           </p>
           <a href="index.html" class="btn btn-primary btn-md">View Demo</a>
