--- a/about.html
+++ b/about.html
@@ -29,10 +29,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="about.html">WiFi-Pi Sensor</a>
+          <a class="navbar-brand" href="about.html">WiFi-Pi Sensor Project</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            <li><a href="http://meyersj.github.io">Home</a></li>
             <li><a href="index.html">Live Demo</a></li>
             <li class="active"><a href="about.html">About</a></li>
             <li><a href="https://github.com/meyersj/wifi">GitHub Repo</a></li>
