--- a/about.html
+++ b/about.html
@@ -8,9 +8,16 @@
     <meta name="description" content="Raspberry Pi WiFi sensor used for analytics of nearby devices as proxy for nearby people. D3 packet analysis visualization.">
     <meta name="author" content="Jeffrey Meyers">
     <title>WiFi-Pi Sensor</title>
+    <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-76941644-1', 'auto');
+ga('send', 'pageview');
+    </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <script src="js/newrelic.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
