--- a/index.html
+++ b/index.html
@@ -28,36 +28,8 @@ ga('send', 'pageview');
   </head>
 
   <body>
-
-    <nav id="main-navbar" class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="about.html">WiFi-Pi Sensor Project</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="http://meyersj.github.io">Home</a></li>
-            <li class="active"><a href="index.html">Live Demo</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="https://github.com/meyersj/wifi">GitHub Repo</a></li>
-        </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
     <div class="container-fluid">
-      <div id="header-row" class="row content-container content-top">
-        <div class="col-xs-12 col-sm-12 col-md-12">
-            <h4>Hover over active devices to see recent history.</h4>
-        </div>
-      </div>
-      <div id="svg-row" class="row content-container content-bottom">
+      <div id="svg-row" class="row content-container">
         <div class="col-xs-12 col-sm-12 col-md-12">
           <div id="visual"></div>
         </div>
@@ -70,6 +42,6 @@ ga('send', 'pageview');
     <script src="js/cache.js"></script>
     <script src="js/scales.js"></script>
     <script src="js/legend.js"></script>
-    <script src="js/demo_main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
