--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ ga('create', 'UA-76941644-1', 'auto');
 ga('send', 'pageview');
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <!--link href="css/bootstrap.css" rel="stylesheet"-->
     <link href="css/wifi.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
